@@ -1,5 +1,9 @@
-$Id: Changelog.txt,v 1.188 2013/08/01 21:21:24 nanard Exp $
+$Id: Changelog.txt,v 1.189 2013/10/07 10:04:55 nanard Exp $
 miniUPnP client Changelog.
+
+2013/10/07:
+  fixed potential buffer overrun in miniwget.c
+  Modified UPNP_GetValidIGD() to check for ExternalIpAddress
 
 2013/08/01:
   define MAXHOSTNAMELEN if not already done
